[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["iamtatsuki05 <tatsukio0522@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
sentencepiece = "^0.1.96"
protobuf = "^3.20.1"
transformers = "^4.18.0"
torch = "^1.11.0"
numpy = "^1.22.3"
jupyterlab = "^3.3.4"
tqdm = "^4.64.0"
spacy = "^3.3.0"
jupyterlab-tabnine = "^0.0.24"
mecab-python3 = "^1.0.4"
datasets = "^1.15.1"
scikit-learn = "^1.1.1"
tensorflow-estimator = "^2.9.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = "^21.10b0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
