[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["iamtatsuki05 <tatsukio0522@gmail.com>"]
packages = [
    { include = "project", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
setuptools = "^69.0.3"
fire = "^0.5.0"
pydantic = "^2.5.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
japanize-matplotlib = "^1.1.3"
numpy = "^1.22.3"
jupyterlab = "^3.3.4"
tqdm = "^4.64.0"
scikit-learn = "^1.1.1"
openpyxl = "^3.1.2"
sentencepiece = "^0.1.96"
protobuf = "^3.20.1"
transformers = "^4.26.1"
spacy = ">=3.3.0"
mecab-python3 = "^1.0.4"
datasets = "^2.10.0"
demoji = "^1.1.0"
emoji = "^1.7.0"
mojimoji = "^0.0.12"
joblib = "^1.2.0"
polars = "^0.16.9"
evaluate = "^0.4.0"
accelerate = "^0.16.0"
pytorch-lightning = "^1.9.3"
torchtext = "^0.14.1"
bitsandbytes = "^0.37.0"
optimum = "^1.13.2"
tensorboard = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ipykernel = ">=6.13.0"
autopep8 = ">=1.6.0"
autoflake = ">=1.4"
flake8 = ">=4.0.1"
flake8-isort = ">=4.1.1"
flake8-quotes = ">=3.3.1"
flake8-print = ">=4.0.0"
isort = ">=5.10.1"
black = ">=22.10.0"
mypy = ">=0.971"
tox = ">=3.25.1"
pre-commit = ">=3.3.3"
nbstripout = "0.6.1"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
torch = {version = "2.0.0+cpu", source = "pytorch_cpu", markers = "sys_platform == 'darwin'"}

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = {version = "2.0.0+cu118", source = "pytorch_cu118", markers = "sys_platform == 'linux'"}
nvitop = "^1.3.2"

[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
